2014-11-13  Oliver Kiddle  <opk@zsh.org>

	* 33669: Src/Zle/zle_utils.c, Test/X02zlevi.ztst: allow an empty
	line to be yanked with yy by allocating 1 byte instead of 0

2014-11-11  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33658: Doc/Zsh/options.yo: AUTO_CD depends on SHIN_STDIN.

2014-11-09  Oliver Kiddle  <opk@zsh.org>

	* 33599: Jun T.: Test/comptest: workaround zpty issue that
	causes vi test cases to fail on MacOS and FreeBSD

	* 33640: clutton: Completion/BSD/Command/_kld: look in
	/boot/modules instead of /modules for third-party modules

	* 33643: Doc/Zsh/options.yo: elaborate documentation of
	the PRIVILEGED option

	* 33639: Src/Zle/zle_vi.c, Test/X02zlevi.ztst: fix bug with vi
	operators on a blank line and with backward bracket matching

	* 33659: Completion/Unix/Command/_gpg: use --dump-options to get
	most of the gpg options to complete

2014-11-08  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33655: Src/zsh.h: remove overlap of node flags.

	* 33653: Src/builtin.c: handle -a option to whence in
	combination with -m.

2014-11-08  Barton E. Schaefer  <schaefer@zsh.org>

	* 33648: Completion/Unix/Command/_gpg: complete for gpg2 as well

2014-11-06  Oliver Kiddle  <opk@zsh.org>

	* 33624: Src/Zle/zle_utils.c: keep region active when widget fails

2014-11-07  Mikael Magnusson  <mikachu@gmail.com>

	* 33607: Src/Modules/attr.c: Fix some minor problems in zattr module

2014-11-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 33614 (based on RedHat BZ-978613): Src/exec.c: signal safety
	when updating global state in execshfunc()

2014-11-05  Oliver Kiddle  <opk@zsh.org>

	* 33604: Src/Zle/zle_utils.c, Src/Zle/zle_vi.c, Test/X02zlevi.ztst:
	fix change merging for vi mode where a change has just been undone

2014-11-04  Oliver Kiddle  <opk@zsh.org>

	* 33596: Src/Zle/zle_keymap.c: make local keymap keybinding hide
	global keymap binding that is a prefix of the local binding

2014-11-02  Oliver Kiddle  <opk@zsh.org>
